--- a/src/css/Sections/Sections.module.css
+++ b/src/css/Sections/Sections.module.css
@@ -6,12 +6,11 @@
     .best_platform_sec_two img {
         right: 36% !important;
     }
-    
-    .best_platform_sec_four img {
-        left: 8% !important;
-    }
 
-    
+    .best_platform_sec_four::before {
+        left: 70% !important;
+    }
+   
 }
 
 @media screen and (max-width: 1200px) {
@@ -135,8 +134,6 @@
     width: 54vw;
 }
 .best_platform_sec_four img {
-    position: relative;
-    left: 15%;
     width: 50vw;
 }
 
@@ -219,7 +216,7 @@
     font-size: 38px;
     font-weight: 700;
     text-align: center;
-    width: 30%;
+    width: 35%;
     margin: auto;
     margin-top: 30px;
 }
@@ -283,4 +280,15 @@
 .last_section_content {
     margin-left: 30px;
 }
+
+.last_section_swiper .swiper, .platform_overview_imgs .swiper {
+    overflow-x: clip !important;
+    overflow-y: visible !important;
+  }
+
+  .last_section_swiper .swiper {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 16%) !important;
+  }
+
+  
 
